Cusines around the world

--- a/Bookclub website.html
+++ b/Bookclub website.html
@@ -7,7 +7,7 @@
          <!-- internel CSS -->
           <style>
             nav{
-                background-color: darkorchid;
+                background-color: rgb(50, 204, 168);
             }
             #Books{
                 color: plum;  font-size: 60px;
